build: add mockito dependency